# entry-data

./: .env.example  pyproject.toml
public/: deleted-tag.xlsx  nondcs-old.xlsx  nondcs-old2.xlsx  nondcs.xlsx  r.xlsx  req.xlsx  selected-non-dcs.xlsx
public/export/: ABSORBER AGITATOR A - CURRENT.xlsx  ABSORBER AGITATOR B - CURRENT.xlsx  ABSORBER AGITATOR C - CURRENT.xlsx  ABSORBER AGITATOR D - CURRENT.xlsx  ABSORBER AGITATOR E - CURRENT.xlsx  ABSORBER RECIRCULATION PUMP A - BRG TEMP 1.xlsx  ABSORBER RECIRCULATION PUMP A - BRG TEMP 2.xlsx  ABSORBER RECIRCULATION PUMP A - PRESSURE.xlsx  ABSORBER RECIRCULATION PUMP A - PUMP DE V.xlsx  ABSORBER RECIRCULATION PUMP A MOTOR - BRG TEMP 1.xlsx  ABSORBER RECIRCULATION PUMP A MOTOR - BRG TEMP 2.xlsx  ABSORBER RECIRCULATION PUMP A MOTOR - CURRENT.xlsx  ABSORBER RECIRCULATION PUMP A MOTOR - MOTOR DE A.xlsx  ABSORBER RECIRCULATION PUMP A MOTOR - MOTOR NDE H.xlsx  ABSORBER RECIRCULATION PUMP A MOTOR - STAT WDG TEMP U.xlsx  ABSORBER RECIRCULATION PUMP A MOTOR - STAT WDG TEMP V.xlsx  ABSORBER RECIRCULATION PUMP A MOTOR - STAT WDG TEMP W.xlsx  ABSORBER RECIRCULATION PUMP A MOTOR - VIB MOTOR DE - AXIAL.xlsx  ABSORBER RECIRCULATION PUMP A MOTOR - VIB MOTOR DE - HOR.xlsx  ABSORBER RECIRCULATION PUMP A MOTOR - VIB MOTOR NDE - HOR.xlsx  ABSORBER RECIRCULATION PUMP A MOTOR - VIB MOTOR NDE - VER.xlsx  ABSORBER RECIRCULATION PUMP B - BRG TEMP 1.xlsx  ABSORBER RECIRCULATION PUMP B - BRG TEMP 2.xlsx  ABSORBER RECIRCULATION PUMP B - PRESSURE.xlsx  (+943 more)
src/: delete_non_dcs.py  export_part.py  main.py  reset_web_id.py
src/models/: envelope.py  tag.py  (+5 more)
(+91 files in other folders)
