[tool.poetry]
name = "entry-data-using-python"
version = "0.1.0"
description = ""
authors = ["perdanamain <firman.fp123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
pandas = ">=2.2.3,<3.0.0"
openpyxl = ">=3.1.5,<4.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
numpy = "^2.2.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"